--- a/src/main/resources/cafe/cafeshop/login-form.fxml
+++ b/src/main/resources/cafe/cafeshop/login-form.fxml
@@ -1,17 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.Cursor?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
-<?import javafx.scene.control.Hyperlink?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane fx:id="main_login" prefHeight="412.0" prefWidth="602.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cafe.cafeshop.LoginController">
+<AnchorPane fx:id="main_login" prefHeight="412.0" prefWidth="602.0" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cafe.cafeshop.LoginController">
    <children>
       <AnchorPane fx:id="su_signupForm" prefHeight="425.0" prefWidth="300.0" styleClass="white-form" stylesheets="@loginDesign.css">
          <children>
@@ -40,7 +35,7 @@
       </AnchorPane>
       <AnchorPane fx:id="su_loginForm" layoutX="300.0" prefHeight="425.0" prefWidth="300.0" styleClass="white-form" stylesheets="@loginDesign.css">
          <children>
-            <Label layoutX="87.0" layoutY="28.0" prefHeight="51.0" prefWidth="129.0" text="Login Account">
+            <Label layoutX="45.0" layoutY="25.0" prefHeight="51.0" prefWidth="223.0" text="Login To Your Account">
                <font>
                   <Font name="!Khmer OS Siemreap" size="20.0" />
                </font>
