--- a/src/main/resources/cafe/cafeshop/itemCard.fxml
+++ b/src/main/resources/cafe/cafeshop/itemCard.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Spinner?>
@@ -8,29 +9,40 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-
-<AnchorPane fx:id="item_cardForm" prefHeight="180.0" prefWidth="230.0" styleClass="shadow" stylesheets="@../../../../../../../Examples/CafeShopManagementSystem-main/CafeShopManagementSystem-main/cafeShopManagementSystem/src/cafeshopmanagementsystem/cardDesign.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cafe.cafeshop.itemCardController">
+<AnchorPane fx:id="item_cardForm" prefHeight="180.0" prefWidth="226.0" stylesheets="@../../../../../../../Examples/CafeShopManagementSystem-main/CafeShopManagementSystem-main/cafeShopManagementSystem/src/cafeshopmanagementsystem/cardDesign.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cafe.cafeshop.itemCardController">
    <children>
-      <VBox prefHeight="180.0" prefWidth="230.0">
+      <AnchorPane prefHeight="200.0" prefWidth="200.0" stylesheets="@cardDesign.css">
          <children>
-            <HBox prefHeight="180.0" prefWidth="230.0">
+            <VBox layoutY="8.0" prefHeight="162.0" prefWidth="216.0">
                <children>
-                  <AnchorPane prefHeight="180.0" prefWidth="231.0" styleClass="card" stylesheets="@../../../../../../../Examples/CafeShopManagementSystem-main/CafeShopManagementSystem-main/cafeShopManagementSystem/src/cafeshopmanagementsystem/cardDesign.css">
+                  <HBox prefHeight="180.0" prefWidth="230.0">
                      <children>
-                        <Label fx:id="item_name" layoutX="14.0" layoutY="14.0" text="Item Name" />
-                        <Label fx:id="item_price" layoutX="158.0" layoutY="14.0" prefHeight="17.0" prefWidth="59.0" text="\$ 0.0" textAlignment="CENTER" />
-                        <AnchorPane layoutX="21.0" layoutY="39.0" prefHeight="97.0" prefWidth="185.0" styleClass="gradient" stylesheets="@loginDesign.css">
+                        <AnchorPane prefHeight="180.0" prefWidth="231.0" stylesheets="@../../../../../../../Examples/CafeShopManagementSystem-main/CafeShopManagementSystem-main/cafeShopManagementSystem/src/cafeshopmanagementsystem/cardDesign.css">
                            <children>
-                              <ImageView fx:id="item_imageView" fitHeight="94.0" fitWidth="165.0" layoutX="14.0" layoutY="3.0" pickOnBounds="true" preserveRatio="true" />
+                              <Label fx:id="item_name" layoutX="14.0" layoutY="14.0" text="Item Name" />
+                              <Label fx:id="item_price" layoutX="158.0" layoutY="14.0" prefHeight="17.0" prefWidth="59.0" text="\$ 0.0" textAlignment="CENTER" />
+                              <AnchorPane layoutX="21.0" layoutY="39.0" prefHeight="97.0" prefWidth="185.0" styleClass="gradient" stylesheets="@loginDesign.css">
+                                 <children>
+                                    <ImageView fx:id="item_imageView" fitHeight="94.0" fitWidth="165.0" layoutX="14.0" layoutY="3.0" pickOnBounds="true" preserveRatio="true" />
+                                 </children>
+                              </AnchorPane>
+                              <Button fx:id="btn_addItem" alignment="CENTER" layoutX="131.0" layoutY="138.0" mnemonicParsing="false" onAction="#addBtn" prefHeight="32.0" prefWidth="77.0" text="Add" textAlignment="CENTER" />
+                              <Spinner fx:id="item_spinner" layoutX="24.0" layoutY="138.0" prefHeight="32.0" prefWidth="94.0" />
                            </children>
                         </AnchorPane>
-                        <Button fx:id="btn_addItem" alignment="CENTER" layoutX="131.0" layoutY="138.0" mnemonicParsing="false" onAction="#addBtn" prefHeight="32.0" prefWidth="77.0" text="Add" textAlignment="CENTER" />
-                        <Spinner fx:id="item_spinner" layoutX="24.0" layoutY="138.0" prefHeight="32.0" prefWidth="94.0" />
                      </children>
-                  </AnchorPane>
+                  </HBox>
                </children>
-            </HBox>
+            </VBox>
          </children>
-      </VBox>
+         <styleClass>
+            <String fx:value="card" />
+            <String fx:value="shadow" />
+         </styleClass>
+      </AnchorPane>
    </children>
+   <styleClass>
+      <String fx:value="shadow" />
+      <String fx:value="card" />
+   </styleClass>
 </AnchorPane>
